[package]
name = "shooting-monsters-game"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"
cfg-if = "1"
pollster = "0.3"
bytemuck = { version = "1.16", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
fyrox-sound = "0.35.0"
web-time = "1.1.0"
wgpu_text = "0.9.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true